--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="description" content="Free Website Pinger & Uptime Monitor" />
+    <meta name="og:title" property="og:title" content="IsItDead" />
+    <meta
+      property="og:description"
+      content="Free Website Pinger & Uptime Monitor"
+    />
+    <meta property="og:url" content="%PUBLIC_URL%"" />
+    <meta property="og:type" content="Service" />
+    <meta property="og:image" content="%PUBLIC_URL%/ogp.png" />
+    <meta property="og:image:alt" content="IID Logo" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
@@ -15,7 +25,7 @@
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     />
-    <title>IsItDead - Website Pinger</title>
+    <title>IsItDead - Free Website Pinger & Uptime Monitor</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
